<resources>
    <string name="app_name">QuizAppSummer21</string>
    <string name="initTextString">Click Next Question to get the first Question</string>
    <string name="trueBtnTXT">True</string>
    <string name="falseBtnText">False</string>
    <string name="emailBtnText">send Email with Score</string>
    <string name="nextBtnText">Next Question</string>
    <string name="finishBtnText">Click when done playing.</string>

    <string name="q1Txt">This is a computer science class.</string>
    <string name="q2Txt">We are learning python.</string>
    <string name="q3Txt">Our IDE is Visual Studio Codes.</string>
    <string name="q4Txt">We will develop applications for android devices.</string>
    <string name="q5Txt">App Development 1 course is fun.</string>

    <string name="correctMessageTxt">You are Correct!</string>
    <string name="wrongMessageTxt">Sorry, that is not correct.</string>
    <string name="emailMessageTxt">New score on the Summer 2021 Quiz App. Your score: </string>

    <string name="score">Score</string>
    <string name="restartBtnTxt">Restart</string>

    <string name="welcomeTXT"> This is the Quiz App Summer 2021</string>
    <string name="startBtnTxt">Begin the App</string>

    <string name="englishBtnTxt">English</string>
    <string name="espanolBtnTxt">Espanol</string>
    <string name="franciasBtnTxt">Francais</string>


    <string name="leftColTXT">High Scorer</string>
    <string name="rightColTXT">Score</string>
    <string name="namehighscore3">NameHighScore3</string>
    <string name="scorehighscore3">scoreHighScore3</string>
    <string name="scorehighscore2">scoreHighScore2</string>
    <string name="namehighscore2">NameHighScore2</string>
    <string name="scorehighscore1">scoreHighScore1</string>
    <string name="namehighscore1">NameHighScore1</string>
    <string name="enterNameTXT">Type your name for High Score List</string>


</resources>