<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"

    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:textColor="#3F51B5" >
        <TableRow>
            <TextView
                android:text="@string/leftColTXT"
                android:gravity="center"
                android:padding="3dip"
                android:textColor="#3F51B5" />

            <TextView
                android:padding="3dip"
                android:text="@string/rightColTXT"
                android:gravity="center"
                android:textColor="#3F51B5"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/scoreN1"
                android:text="@string/namehighscore1"
                android:gravity="center"
                android:padding="3dip" />
            <TextView
                android:id="@+id/score1"
                android:text="@string/scorehighscore1"
                android:gravity="center"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/scoreN2"
                android:text="@string/namehighscore2"
                android:gravity="center"
                android:padding="3dip" />
            <TextView
                android:id="@+id/score2"
                android:text="@string/scorehighscore2"
                android:gravity="center"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/scoreN3"
                android:text="@string/namehighscore3"
                android:gravity="center"
                android:padding="3dip" />
            <TextView
                android:id="@+id/score3"
                android:text="@string/scorehighscore3"
                android:gravity="center"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/scoreTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/score"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/scoreUPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="0"
        android:textSize="24sp" />

    <Button
        android:id="@+id/sendEmailBTN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailBtnText"
        android:visibility="visible" />

    <Button
        android:id="@+id/restartBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restartBtnTxt"
        android:visibility="visible" />


</LinearLayout>