<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"

    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/scoreTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/welcomeTXT"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/scoreUPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textSize="24sp" />


    <Button
        android:id="@+id/startBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startBtnTxt"
        android:visibility="visible" />

    <EditText
        android:id="@+id/entNameTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/enterNameTXT"
        android:textSize="24sp" />

</LinearLayout>